<resources>
    <string name="app_name">MyNotes</string>
    <string name="note_icon_image">Splash Screen Image</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_home">Home</string>
    <string name="title_notes">Note</string>
    <string name="title_tasks">Task</string>
    <string name="title_settings">Settings</string>

    <string name="action_add">Add New Note</string>
    <string name="title_activity_create_note">Create Note</string>
    <string name="note_title">Enter Note Title</string>
    <string name="note_title_text_view">Note Title</string>
    <string name="note_content">Content</string>
    <string name="note_created_date">Note Created Date</string>
    <string name="view_notes">View Notes</string>

    <!--Tasks related strings-->
    <string name="view_tasks">View Tasks</string>
    <string name="all_tasks">All Tasks</string>
    <string name="create_task">Create Task</string>
    <string name="new_task">Enter Task Description</string>
    <string name="done">Done</string>
    <string name="task_list_item">Task Details</string>
    <string name="task_create_success">Task is successfully created</string>
    <string name="note_create_success">Note is successfully created</string>

    <string name="fireebase_create_success">The saving of data to firebase is successful</string>
    <string name="firebase_create_failed">The saving of data to firebase failed</string>
    <string name="firebase_signin_status">You are currently signed in</string>

    <!-- User Profile Strings-->
    <string name="profile_image">User Profile Image</string>
    <string name="user_email">testemail@gmail.com</string>
    <string name="user_name">Test Email</string>
    <string name="style">STYLE</string>
    <string name="fonts">Fonts</string>

    <string name="font_style">Select Font Style</string>
    <string-array name="font_style_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
    </string-array>

    <string-array name="sort_note_array">
        <item>Date Created</item>
        <item>Date Modified</item>
    </string-array>

    <string name="sort_notes_by">Sort Notes By</string>
    <string name="date_created">Date Created</string>
    <string name="sort_tasks_by">Sort Tasks By</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>
