<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/note_card_view"
        android:layout_width="190dp"
        android:layout_height="170dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        android:layout_margin="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/note_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginTop="@dimen/fragment_vertical_margin"
                android:textAppearance="?android:textAppearanceMedium"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="8dp"
                android:text="@string/note_title_text_view"/>

            <TextView
                android:id="@+id/note_created_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="14sp"
                android:textStyle="italic"
                android:text="@string/note_created_date"/>

            <TextView
                android:id="@+id/note_content_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="?android:textAppearanceSmall"
                android:textSize="14sp"
                android:maxLines="2"
                android:fontFamily="sans-serif-medium"
                android:text="@string/note_content"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</layout>
