<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.eniola.capstoneproject_mynotes.CreateNoteActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.eniola.capstoneproject_mynotes.CreateNoteActivity"
            tools:showIn="@layout/activity_create_note"
            tools:ignore="AutoFill">

            <androidx.cardview.widget.CardView
                android:id="@+id/note_heading_card_view"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/fragment_vertical_margin"
                app:cardCornerRadius="@dimen/card_corner_radius"
                android:background="@color/colorGrey"
                app:cardElevation="@dimen/card_elevation">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/note_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="24sp"
                        android:hint="@string/note_title"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimaryDark"
                        android:inputType="text"
                        android:background="@android:color/transparent" />

                    <TextView
                        android:id="@+id/created_date_text_view"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_below="@+id/note_title"
                        android:layout_marginTop="16dp"
                        android:text="@string/note_created_date"
                        android:textSize="12sp"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimaryDark"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/note_content"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintTop_toBottomOf="@+id/note_heading_card_view"
                app:cardCornerRadius="@dimen/card_corner_radius"
                android:layout_margin="@dimen/fragment_vertical_margin"
                android:background="@color/colorGrey">

                <ScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/note_content_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/action_add"
                        android:gravity="start"
                        android:inputType="textMultiLine"
                        app:layout_constraintTop_toBottomOf="@+id/note_heading_card_view"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_margin="@dimen/fragment_vertical_margin"
                        tools:layout_editor_absoluteX="34dp"
                        tools:layout_editor_absoluteY="-54dp"
                        android:background="@android:color/transparent"/>
                </ScrollView>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_done" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>

